# opensearch-query-builder

./: .gitignore  Cargo.toml  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: check.yml
examples/: basic_example.rs  basic_search_request.rs  basic_search_request_builder.rs  complex_search_example.rs  dynamic_builder_example.rs  function_score_example.rs  multiple_highlight.rs  visualization.rs
src/: lib.rs  query.rs  request.rs  test.rs  util.rs  visualizer.rs
src/query/: bool.rs  function_score.rs  match_phrase.rs  match_phrase_prefix.rs  match_query.rs  range.rs  regexp.rs  term.rs  terms.rs  wildcard.rs
src/query/bool/: test.rs
src/query/function_score/: boost_mode.rs  decay_function.rs  field_value_factor.rs  random_score.rs  score_function.rs  score_mode.rs  script_score.rs
src/query/wildcard/: test.rs
src/request/: aggregation_type.rs  collapse.rs  highlight.rs  sort_type.rs
src/request/sort_type/: script.rs  test.rs
src/request/sort_type/script/: test.rs
src/visualizer/: html.rs  mod.rs  test.rs  visualization_node.rs
src/visualizer/html/: test.rs
