[package]
name = "opensearch_query_builder"
description = "Opensearch query builder"
version = "0.0.7"
edition = "2024"
authors = ["whutchinson98"]
include = ["src/**/*.rs"]
categories = ["data-structures"]
homepage = "https://github.com/whutchinson98/opensearch-query-builder"
repository = "https://github.com/whutchinson98/opensearch-query-builder"
license = "MIT"
readme = "README.md"
keywords = ["opensearch"]

[features]
default = ["visualizer"]
visualizer = ["dep:askama"]

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

# Optional visualization dependencies
askama = { version = "0.14.0", optional = true }
